--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -56,6 +56,7 @@
                 <a href="/">Home</a>
                 <a href="/login">Login</a>
                 <a href="/register">Sign In</a>
+                <a href="/dcl">Create DCL</a>
             </div>
         {% endif %}
         
