--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -49,6 +49,8 @@
         {% if user.is_authenticated %}
         <div class="sidenav">
             <a href="/">Home</a>
+            <a href="/dcl">Create DCL</a>
+            <a href="/ctask">Create Task</a>             
             <a href="/logout">Logout</a>
         </div>
         {% else %}
@@ -56,7 +58,7 @@
                 <a href="/">Home</a>
                 <a href="/login">Login</a>
                 <a href="/register">Sign In</a>
-                <a href="/dcl">Create DCL</a>
+                
             </div>
         {% endif %}
         
