Added Student views.

--- a/main/templates/tasks.html
+++ b/main/templates/tasks.html
@@ -72,6 +72,9 @@
             <td>
                 <a class="button button" href="{% url 'dcl'%}">Edit</a>
             </td>
+            <td>
+                <a class="button button" href="{% url 'draw'%}">Resolver</a>
+            </td>
         </tr>
     {% endfor %}
     </tbody>
