--- a/main/templates/users.html
+++ b/main/templates/users.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 
-<h1>Tasks Available</h1>
 <style>
     .button {
         background-color: #008CBA; /* Blue */
@@ -55,31 +54,17 @@
     <thead>
     <tr>
     <th>Nombre</th>
-    <th>Statement</th>
     <th></th>
     </tr>
     </thead>
     <tbody>
-    {% for task in task_list %}
+    {% for user in users_list %}
         <tr>
             <td>
-                {{task.name}}
-            </td>
-            <td style="word-wrap: break-word;
-            max-width: 150px;">
-                {{task.statement}}
+                {{user}}
             </td>
             <td>
-                <a class="button button" href="{% url 'dcl'%}">Edit</a>
-            </td>
-            <td>
-                <form action="../ctask/" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="name" value="{{ task.name }}">
-                    <input type="hidden" name="statement" value="{{ task.statement }}">
-                    <input type="hidden" name="image" value="{{ task.image }}">
-                    <button type="submit" class="btn btn-success">Duplicate</button>
-                </form>
+                <a class="button button" href="{% url 'dcl'%}">Info</a>
             </td>
         </tr>
     {% endfor %}
