Steps with task statement and image + fixes

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,6 +51,7 @@
                 <a href="/">Home</a>
                 <a href="/ctask">Create Task</a>
                 <a href="/tasks">Tasks List</a>
+                <a href="/users">Users List</a>
                 <a href="/logout">Logout</a>
             </div>
             {% else %}
