--- a/main/templates/student/ddcl.html
+++ b/main/templates/student/ddcl.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if user.is_authenticated %}
+    {% load static %}
+    <h1>Dibujo DCL</h1>
+    <h4>Statement:</h4>
 
-<h1>Dibujo DCL</h1>
+    <p>{{ task.statement }}</p>
+
+    <img src="/{{ task.image }}">
+
 <p>
     Reemplaze los apoyos y vinculos internos por las fuerzas correspondientes en los ejes x e y.  
 </p>
@@ -59,7 +66,7 @@
   <body class="scrollable">
     <div id="container"></div>
 
-    <a class="button button" href="../eq/">Next</a>
+    <a class="button button" href="{% url 'eq' task.id %}">Next</a>
 
     <div id="menu">
       <div>
@@ -804,5 +811,5 @@
 
     </script>
   </body>
-
+{% endif %}
 {% endblock %}
