--- a/main/templates/tasks.html
+++ b/main/templates/tasks.html
@@ -82,6 +82,8 @@
                                 <input type="hidden" name="name" value="{{ task.name }}">
                                 <input type="hidden" name="statement" value="{{ task.statement }}">
                                 <input type="hidden" name="image" value="{{ task.image }}">
+                                <input type="hidden" name="starting_stage" value="{{ task.starting_stage }}">
+                                <input type="hidden" name="difficulty" value="{{ task.difficulty }}">
                                 <button type="submit" class="btn btn-success">Duplicate</button>
                             </form>
                         </td>
