--- a/main/templates/student/ddcl.html
+++ b/main/templates/student/ddcl.html
@@ -7,7 +7,7 @@
 
     <p>{{ task.statement }}</p>
 
-    <img src="/{{ task.image }}">
+    <img src="https://its-estatica.herokuapp.com/media/{{ task.image }}">
 
 <p>
     Reemplaze los apoyos y vinculos internos por las fuerzas correspondientes en los ejes x e y.  
