--- a/main/templates/student/drawDcl.html
+++ b/main/templates/student/drawDcl.html
@@ -7,7 +7,7 @@
 
     <p>{{ task.statement }}</p>
 
-    <img src="media/{{ task.image }}">
+    <img src="https://its-estatica.herokuapp.com/media/{{ task.image }}">
     <p>
         Represente el cuerpo rigido del enunciado como un sistema de barras.
     </p>
