--- a/main/templates/student/equations.html
+++ b/main/templates/student/equations.html
@@ -8,7 +8,7 @@
 
     <p>{{ task.statement }}</p>
 
-    <img src="/{{ task.image }}">
+    <img src="https://its-estatica.herokuapp.com/media/{{ task.image }}">
 <p>
     Basandose en los diagramas realizados escriba las ecuaciones de equilibrio.
     Seleccione elementos del DCL para llevarlo a la ecuación.
