--- a/main/templates/student/selectDcl.html
+++ b/main/templates/student/selectDcl.html
@@ -7,7 +7,7 @@
 
     <p>{{ task.statement }}</p>
 
-    <img src="/{{ task.image }}">
+    <img src="https://its-estatica.herokuapp.com/media/{{ task.image }}">
 <p>
     Divida el cuerpo rigido en varios DCL.
 </p>
