--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -57,7 +57,7 @@
             {% else %}
             <div class="sidenav">
                 <a href="/">Home</a>
-                <a href="/gettask">Get Task</a>
+                <a href="/draw/1">Get Task</a>
                 <a href="/tasks">Past Tasks</a>
                 <a href="/logout">Logout</a>
             </div>
